[gd_scene load_steps=4 format=3 uid="uid://bjat3thnxa3gk"]

[ext_resource type="Theme" uid="uid://c5680xpg6t205" path="res://themes/default.tres" id="1_7ctqe"]
[ext_resource type="Script" path="res://scripts/general_settings.gd" id="2_6y0au"]
[ext_resource type="Texture2D" uid="uid://dahtm5esse8rr" path="res://icons/reload.svg" id="3_wj8ek"]

[node name="GeneralSettings" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7ctqe")
script = ExtResource("2_6y0au")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 20.0
offset_right = -15.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 14
theme_override_constants/v_separation = 0
columns = 3

[node name="Label" type="Label" parent="ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 6
text = "App theme"

[node name="LoadDefaultAppTheme" type="Button" parent="ScrollContainer/GridContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
tooltip_text = "Load default value"
theme_type_variation = &"IconButton"
icon = ExtResource("3_wj8ek")
flat = true
icon_alignment = 1
expand_icon = true

[node name="AppTheme" type="OptionButton" parent="ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 6
theme_type_variation = &"SettingLineEdit"
flat = true
alignment = 2
selected = 0
item_count = 1
popup/item_0/text = "Default"

[connection signal="pressed" from="ScrollContainer/GridContainer/LoadDefaultAppTheme" to="." method="_on_load_default_setting_pressed" binds= ["app_theme"]]
[connection signal="item_selected" from="ScrollContainer/GridContainer/AppTheme" to="." method="_on_app_theme_item_selected"]
